fix: description, error json type add
